# seven_days_to_time_rs

./: Cargo.toml  LICENSE  ReadMe.md
src/: main.rs  test.rs
